[gd_scene load_steps=11 format=2]

[ext_resource path="res://Jogador.tscn" type="PackedScene" id=1]
[ext_resource path="res://Turba.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://art/New Piskel (1).png" type="Texture" id=7]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 363, 367 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "animation"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 363, 367 ), Vector2( 119, 363 ), Vector2( 363, 367 ) ]
}

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
mob_scene = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 363, 367 )
scale = Vector2( 7.34, 7.34 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/RESET = SubResource( 2 )
anims/animation = SubResource( 3 )

[node name="Jogador" parent="." instance=ExtResource( 1 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="CaminhoTurba" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="LocalGeraçãoTurba" type="PathFollow2D" parent="CaminhoTurba"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSide" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="hit" from="Jogador" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
